<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.sayhellototheworld.littlewatermelon.shareplan.view.function_view.PlanDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:background="@color/white1">

        <LinearLayout
            android:id="@+id/activity_plan_details_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40px"
                android:layout_height="wrap_content"
                android:src="@drawable/topbar_back"/>

            <TextView
                android:id="@+id/activity_plan_details_back_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/white4"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/activity_plan_details_more"
            android:layout_width="64px"
            android:layout_height="32px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15px"
            android:scaleType="fitEnd"
            android:src="@drawable/more"/>
    </RelativeLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_plan_details_refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:srlAccentColor="@color/white"
        app:srlEnableLoadmore="true"
        app:srlEnableLoadmoreWhenContentNotFull="true"
        app:srlEnablePreviewInEditMode="false"
        app:srlPrimaryColor="@color/gray">

        <com.scwang.smartrefresh.layout.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_srlBackgroundColor="@color/white6"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white6"
            android:fillViewport="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="15px">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30px"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="5px"
                    android:paddingLeft="15px"
                    android:paddingRight="15px"
                    android:paddingTop="5px">

                    <ImageView
                        android:id="@+id/activity_plan_details_limit_icon"
                        android:layout_width="30px"
                        android:layout_height="30px"
                        android:src="@drawable/limit_open"/>

                    <TextView
                        android:id="@+id/activity_plan_details_limit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5px"
                        android:textSize="15px"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/white6"/>

                <TextView
                    android:id="@+id/activity_plan_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:lineSpacingMultiplier="1.5"
                    android:padding="15px"
                    android:textColor="@color/plan_title_text_color"
                    android:textIsSelectable="true"
                    android:textSize="35px"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90px"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:paddingBottom="10px"
                    android:paddingLeft="15px"
                    android:paddingRight="15px"
                    android:paddingTop="10px">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/activity_plan_details_head_portrait"
                        android:layout_width="70px"
                        android:layout_height="70px"
                        android:src="@drawable/head_log1"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20px"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/activity_plan_details_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15px"
                            android:gravity="center_vertical"
                            android:textColor="@color/plan_user_name_text_color"
                            android:textSize="25px"/>

                        <TextView
                            android:id="@+id/activity_plan_details_create_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5px"
                            android:textSize="15px"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/activity_plan_details_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:lineSpacingMultiplier="1.5"
                    android:paddingBottom="15px"
                    android:paddingLeft="15px"
                    android:paddingRight="15px"
                    android:paddingTop="15px"
                    android:textIsSelectable="true"
                    android:textSize="30px"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="15px">

                    <com.sayhellototheworld.littlewatermelon.shareplan.customwidget.MyGridView
                        android:id="@+id/activity_plan_details_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numColumns="3"
                        android:layout_marginTop="20px"
                        android:gravity="center_horizontal"
                        android:horizontalSpacing="15dp"
                        android:verticalSpacing="8dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20px"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="5px"
                    android:paddingLeft="15px"
                    android:paddingRight="15px"
                    android:paddingTop="5px">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/plan_statue"
                        android:textSize="15px"/>

                    <TextView
                        android:id="@+id/activity_plan_details_statue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textColor="@color/plan_text_statue_ing"
                        android:textSize="15px"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/white6"/>

                <RelativeLayout
                    android:id="@+id/activity_plan_details_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingBottom="5px"
                    android:paddingLeft="15px"
                    android:paddingRight="15px"
                    android:paddingTop="5px">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/plan_progress"
                        android:textSize="25px"/>

                    <ImageView
                        android:layout_width="35px"
                        android:layout_height="85px"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/right_back"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20px"
                    android:background="@color/white"
                    android:paddingBottom="15px"
                    android:paddingLeft="15px"
                    android:paddingRight="15px"
                    android:paddingTop="15px">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plan_comment"
                        android:textSize="30px"/>

                    <TextView
                        android:id="@+id/activity_plan_details_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2px"
                        android:textSize="30px"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25px"
                        android:text="@string/plan_like"
                        android:textSize="30px"/>

                    <TextView
                        android:id="@+id/activity_plan_details_likes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2px"
                        android:textSize="30px"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/white6"/>

                <com.sayhellototheworld.littlewatermelon.shareplan.customwidget.MyListView
                    android:id="@+id/activity_plan_details_comment_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>
        </ScrollView>

        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_srlBackgroundColor="@color/white6"/>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</LinearLayout>
